<resources>
    <!-- Activities and menu strings -->
    <string name="app_name">DoNext</string>
    <string name="action_settings">Settings</string>
    <string name="action_editTabs">Edit lists</string>
    <string name="action_about">About</string>
    <string name="action_new_task">New task</string>
    <string name="action_edit_task">Edit</string>
    <string name="action_changeLayout">Change layout</string>
    <string name="action_history">History</string>

    <!-- Strings related to tabs -->
    <string name="tab_left_arrow">Left scroll arrow</string>
    <string name="tab_right_arrow">Right scroll arrow</string>

    <!-- Strings related to Task List edition -->
    <string name="task_list_new_list_hint">New list name</string>
    <string name="task_list_new_list_create">Create</string>
    <string name="task_list_new_list_error">List name cannot be blank</string>
    <string name="task_list_delete">Delete</string>
    <string name="task_list_confirmation_delete">Delete task list?</string>
    <string name="task_list_drag_handle">Drag handle</string>
    <string name="task_list_no_lists">Create a new task list</string>
    <string name="task_list_edit">Edit task lists</string>
    <string name="task_list_ok">OK</string>

    <!-- Strings related to new task dialog -->
    <string name="new_task_list">Add to list</string>
    <string name="new_task_name_hint">New task name</string>
    <string name="new_task_name_error">Task name cannot be blank</string>
    <string name="new_task_description_hint">Optional task description</string>
    <string name="new_task_priority">Priority</string>
    <string name="new_task_due_date">Set a due date?</string>
    <string name="new_task_save">Save</string>
    <string name="new_task_cancel">Cancel</string>
    <string name="new_task_delete">Delete</string>

    <!-- Strings related to task details activity -->
    <string name="task_no_tasks">No tasks here!</string>
    <string name="task_alarm">Task is past due date</string>
    <string name="create_tasks">Create one there</string>

    <!-- String related to the SnackBar -->
    <string name="snackabar_label">Task %s</string>
    <string name="snackabar_action_done">done</string>
    <string name="snackabar_action_next">nexted</string>
    <string name="snackabar_action_deleted">deleted</string>
    <string name="snackabar_button">Undo</string>

    <!-- Strings related to the confirmation dialog -->
    <string name="task_confirmation_done_text">Mark task as Done?</string>
    <string name="task_confirmation_next_text">NEXT, do this one later?</string>
    <string name="task_confirmation_delete_text">Delete this task?</string>
    <string name="task_confirmation_done_button">Done</string>
    <string name="task_confirmation_next_button">Next</string>
    <string name="task_confirmation_delete_button">Delete</string>
    <string name="task_confirmation_no_button">Cancel</string>
    <string name="task_confirmation_never_button">Never ask again</string>

    <!-- Strings related to Settings -->
    <string name="settings_category_tasks">Tasks</string>
    <string name="settings_category_tasklists">Task lists</string>
    <string name="settings_confirm_donext">Confirm on next?</string>
    <string name="settings_confirm_markdone">Confirm on done?</string>
    <string name="settings_confirm_delete">Confirm on delete?</string>
    <string name="settings_task_layout">Task layout</string>
    <string name="settings_today_title">Today view</string>
    <string name="settings_today_enable">Enable Today view?</string>
    <string name="settings_today_desc">The Today view is a special way of showing your tasks. Select which tasks you want to do during the day and they will show up in this view. At the end of the day, the view is reset.</string>
    <string name="settings_max_lists_label">Maximum number of lists</string>
    <string name="default_task_list_name">My tasks</string>

    <!-- Strings related to About -->
    <string name="donext_description">DoNext is a new kind of task manager, based on the premise that creating too many tasks is counterproductive. Instead, swipe tasks left and right to push them back to the bottom of your backlog to work on them at a later time!</string>
    <string name="about_version_donext">DoNext version %s</string>
    <string name="about_version_android">Android version %d</string>
    <string name="about_link" translatable="false">https://wismna.github.io/DoNext/</string>

    <!-- Strings related to Today -->
    <string name="title_activity_today">Today</string>
    <string name="action_todayList">Today View</string>
    <string name="new_task_today">Do this task today?</string>
    <string name="today_search_hint">Search…</string>
    <string name="action_today_select">Select tasks</string>
    <string name="task_list_edit_list_hint">List name</string>
    <string name="incompatible_sdk_version">Sorry, your Android version is not supported.</string>
    <string name="today_no_tasks">Nothing to do today</string>
    <string name="today_create_tasks">Add some tasks there</string>

    <!-- String related to History -->
    <string name="title_activity_history">History</string>
    <string name="action_view_task">Task</string>

</resources>
