<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <!--<item
        android:id="@+id/action_newTask"
        android:orderInCategory="10"
        android:title="@string/action_new_task"
        android:onClick="openNewTaskDialog"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_todayList"
        android:orderInCategory="15"
        android:title="@string/action_todayList"
        android:onClick="showTodayList"
        android:icon="@drawable/ic_today_dark"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_changeLayout"
        android:orderInCategory="20"
        android:title="@string/action_changeLayout"
        android:onClick="changeLayout"
        android:icon="@drawable/ic_format_size_dark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_editTabs"
        android:orderInCategory="25"
        android:title="@string/action_editTabs"
        android:onClick="openTaskLists"
        android:icon="@drawable/ic_list_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:orderInCategory="25"
        android:title="@string/action_history"
        android:onClick="openHistory"
        android:icon="@drawable/ic_history_dark"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        android:onClick="openSettings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="40"
        android:title="@string/action_about"
        android:onClick="openAbout"
        app:showAsAction="never" />
</menu>
