<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/task_select" >
    <TextView
        android:id="@+id/no_more_tasks"
        android:text="@string/task_no_tasks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center"
        android:gravity="center_vertical"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/create_tasks"
        android:text="@string/create_tasks"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|bottom"
        android:layout_marginBottom="30dp"
        android:drawableEnd="@drawable/ic_arrow_right_light"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:visibility="gone"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/task_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:scrollbars="vertical"
        android:name="com.wismna.geoffroy.donext.activities.TaskFragment"
        tools:context=".fragments.TasksFragment"
        tools:listitem="@layout/fragment_task_detailed" />
    <RelativeLayout
        android:id="@+id/task_list_background"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:background="@color/colorAccent"
        android:visibility="gone">
        <TextView
            android:id="@+id/task_background_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/task_confirmation_done_button"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/task_background_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/task_confirmation_next_button"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:visibility="gone"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryLight"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground" >
        <TextView
            android:id="@+id/total_task_count"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp" />
        <TextView
            android:id="@+id/total_task_cycles"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"  />
    </LinearLayout>
</FrameLayout>